# QNLP_project

./: .gitignore  README.md  TRAIN_COSTS-100-train_30-val_200_epochs_a-0.3_c-0.06.csv  pyproject.toml
Journal/: 02_10_24.md  02_11_24.md  08_11_24.md  09_10_24.md  10_10_24.md  17_10_24.md  18_10_24.md  23_10_24.md  24_10_02.md  24_10_09.md  24_10_23.md  24_10_24.md  24_11_08.md  24_11_12.md  24_11_22.md  31_10_24.md  README.md  SitRep-29-10-24.ipynb
Journal/february/: 25_02_06.md  25_02_25.md
Journal/january/: 25_01_15.md  25_01_29.md
Model Training Data/: 30-sentences_a-0.1_c-0.06.csv  30-sentences_a-0.4_c-0.06.csv  30-sentences_a-0.5_c-0.06.csv
binary_classification_model/: README.md  model.lt  training_with_fidelity.ipynb
experiments/: README.md  plotter.ipynb  train_data_generator.py  train_data_generator_binary.py
fidelity_model/: README.md  best_fidelity_model.lt  fidelity_accuracy_evaluator.py  fidelity_model.py  fidelity_timing.ipynb  fidelity_trainer.py  plotter.ipynb  quantum_trainer.py  state_fidelity.py  testing.ipynb  train.py  train_data_generator.py  train_data_generator_alt.py  trainer.py  training_with_fidelity.ipynb  utils.py
src/: example_train.csv  fidelity_accuracy_evaluator.py  fidelity_timing.ipynb  fidelity_trainer.py  similarity_trainer.py  state_fidelity.py  state_fidelity_test.py  train_data_generator.py  utils.py
testing/: BERT_model_similarities.ipynb  lambeq_qknn.py  simple_state_fidelity_test.ipynb  simple_swap_test.ipynb  state_fidelity_with_model.ipynb  testing_model.ipynb  training_new_model.ipynb
(+390 files in other folders)
